--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0",
-    "@openzeppelin/test-helpers": "^0.5.0"
+    "@openzeppelin/test-helpers": "^0.5.0",
+    "@truffle/hdwallet-provider": "^2.1.15",
+    "dotenv": "^16.4.7"
   }
 }
