--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "@openzeppelin/test-helpers": "^0.5.0",
     "@truffle/hdwallet-provider": "^2.1.15",
     "dotenv": "^16.4.7"
+  },
+  "devDependencies": {
+    "truffle-plugin-stdjsonin": "github:mhrsalehi/truffle-plugin-stdjsonin"
   }
 }
